# aclimate_v3_orm

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pipeline.yml
src/aclimate_v3_orm/: __main__.py  alembic.ini  main.py
src/aclimate_v3_orm/database/: __init__.py
src/aclimate_v3_orm/enums/: __init__.py  app.py  indicator_feature_type.py  indicators_type.py  module.py  period.py  source_type.py  stress_category.py
src/aclimate_v3_orm/factory/: __init__.py  base_factory.py
src/aclimate_v3_orm/migrations/: __init__.py  env.py
src/aclimate_v3_orm/models/: __init__.py  climate_historical_climatology.py  climate_historical_daily.py  climate_historical_indicator.py  forecast.py  mng_crop.py  (+27 more)
tests/: conftest.py  test_climate_historical_climatology_service.py  test_climate_historical_daily_service.py  test_climate_historical_indicator_service.py  test_climate_historical_monthly_service.py  test_forecast_service.py  test_historical_agroclimatic_indicator_service.py  test_mng_admin_1_service.py  test_mng_admin_2_service.py  test_mng_climate_measure_service.py  test_mng_configuration_file_service.py  test_mng_country_service.py  test_mng_crop_service.py  test_mng_cultivar_service.py  test_mng_data_source_service.py  test_mng_indicators_service.py  test_mng_location_service.py  test_mng_phenological_stage_service.py  test_mng_season_service.py  test_mng_setup_service.py  test_mng_soil_service.py  test_mng_source_service.py  test_mng_stress.py  test_phenological_stage_stress_service.py  test_season_service.py
(+149 files in other folders)
